Neues Design Bugfix: #447 Tabelle mit Auftragspositionen scrollbar gemacht
- less/css neu kompiliert

--- a/css/less/main.less
+++ b/css/less/main.less
@@ -569,7 +569,7 @@ pre.filecontent {
 // --------------------------------------
 
 .horizontal-scroll-wrapper {
-  overflow-x: auto;
+  overflow-x: auto !important;
 }
 
 
